# libattitude

./: .gitignore  CMakeLists.txt  README.md
AML/: AML.cpp  AML.h  CMakeLists.txt  dcm.cpp  dcm.h  euler.cpp  euler.h  matrix3.cpp  matrix3.h  quaternion.cpp  quaternion.h  vector3.cpp  vector3.h
example/: CMakeLists.txt  main.cpp  quaternion_example.cpp
include/: dummy.hpp
notebooks/: dcm_interpolation.ipynb  euler.ipynb  euler_kinematics.ipynb  multiple_rotations.ipynb  quaternion.ipynb  quaternion_euler.ipynb  quaternion_interpolation.ipynb  quaternion_kinematics.ipynb  rotations.py
test/: CMakeLists.txt  dcm_test.cpp  matrix3_test.cpp  quat_test.cpp  vector3_test.cpp
